--- a/高级配置.md
+++ b/高级配置.md
@@ -5,17 +5,16 @@
 
 (分别为 `default` 与 `rainbow` 主题)
 
-![](https://cdn.jun6.net/201806062247_695.png)
+<img src="https://cdn.jun6.net/201806062247_695.png" width="400" />
 
-![](https://cdn.jun6.net/201806062252_327.png)
+<img src="https://cdn.jun6.net/201806062252_327.png" width="400" />
+
 
 **游客被 @ 收到的邮件 :**
 
-![](https://cdn.jun6.net/201806062250_552.png)
+<img src="https://cdn.jun6.net/201806062250_552.png" width="400" />
 
-![](https://cdn.jun6.net/201806062255_490.png)
-
-
+<img src="https://cdn.jun6.net/201806062255_490.png" width="400" />
 > 分别为默认主题和 `rainbow` 彩虹主题
 
 
@@ -38,7 +37,6 @@
 ```
 
 > 注 : 此 `crontab` 不是 `LeanCloud` 后台的定时任务，如果你没有 `Linux` 服务器来配置此定时器，那么可以在此 [issues](https://github.com/zhaojun1998/Valine-Admin/issues/1) 中回复我，我帮你加上。
-
 
 
 ## 高级功能
