--- a/高级配置.md
+++ b/高级配置.md
@@ -15,6 +15,7 @@
 <img src="https://cdn.jun6.net/201806062250_552.png" width="500" />
 
 <img src="https://cdn.jun6.net/201806062255_490.png" width="500" />
+
 > 分别为默认主题和 `rainbow` 彩虹主题
 
 
@@ -82,7 +83,7 @@
 后台登录需要账号密码，需要在这里设置，只需要填写 `email`、`password`、`username`，这三个字段即可, 使用  `email` 作为账号登陆即可。（为了安全考虑，此 `email` 必须为配置中的 `SMTP_USER` 或 `TO_EMAIL`， 否则不允许登录）
 <img src="https://cdn.jun6.net/201801112133_467.png" width="600">
 
-> Web 后台目前仅有 `查看` 与 `删除` 功能，且页面也较为简略，因本人对前端不熟，欢迎提 RP 美化与增强 Web 后台。
+> Web 后台目前仅有 `查看` 与 `删除` 功能，且页面也较为简略，因本人对前端不熟，欢迎提 PR 美化与增强 Web 后台。
 
 
 
